# honeypot-foundry

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  ROADMAP.md  SECURITY.md  honeypot_foundry_cli.py  pyproject.toml
analysis/: alert_dedup.py  attack_campaign_profiler.py  geo_enrichment.py  lateral_movement_detector.py  scanner_fingerprint.py  session_reconstructor.py  threat_intel.py
cli/: main.py  output.py
collectors/: event_schema.py  event_writer.py  export_api.py  forwarder.py  ip_blocking.py  jsonl_writer.py  log_forwarder.py  siem_adapter.py  transports.py  writer.py
docs/: architecture.md  kubernetes-honeypot-deployment.md  siem-alerting-rules.md
honeypots/: canary_token.py  geo_alert.py  health.py  protocol_decoys.py  rate_limit.py  session_recorder.py
reports/: dashboard_metrics.py
schemas/: event_schema.json
scripts/: replay_events.py
tests/: test_alert_dedup.py  test_api_server.py  test_attack_campaign_profiler.py  test_canary_token.py  test_cli.py  test_cli_output_file_create_dirs.py  test_cli_siem_forward_batch_size.py  test_credential_classifier.py  test_credential_logger.py  test_event.py  test_event_id_validation.py  test_event_source_tagging.py  test_event_writer_buffering.py  test_export_api.py  test_ftp_server.py  test_geo_alert.py  test_geo_dashboard.py  test_heartbeat_interval_cli.py  test_helm_chart.py  test_http_api_body_truncation.py  test_http_server.py  test_lateral_movement_detector.py  test_log_forwarder.py  test_output_file_permissions.py  test_output_rotation.py  test_protocol_decoys.py  (+7 more)
(+39 files in other folders)
