[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "honeypot-foundry"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["asyncssh>=2.14", "fastapi>=0.110", "uvicorn>=0.29", "pydantic>=2.0", "click>=8.0", "structlog>=24.0"]

[project.scripts]
honeypot = "honeypot_foundry_cli:cli"

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "pytest-asyncio>=0.23", "httpx>=0.27"]

[tool.setuptools]
py-modules = ["honeypot_foundry_cli"]

[tool.setuptools.packages.find]
include = ["analysis*", "cli*", "collectors*", "honeypots*", "reports*"]

[tool.pytest.ini_options]
addopts = "--cov=honeypots --cov=collectors --cov-report=term-missing --cov-fail-under=70"
asyncio_mode = "auto"
